--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@mantine/core": "^5.10.0",
+    "@mantine/ds": "^5.10.0",
+    "@mantine/form": "^5.10.0",
+    "@mantine/hooks": "^5.10.0",
+    "@mantine/prism": "^5.10.0",
+    "@tabler/icons": "^1.119.0",
     "html-react-parser": "^3.0.6",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
